use pob community fork

--- a/Makefile.darwin
+++ b/Makefile.darwin
@@ -10,7 +10,7 @@ all: frontend pob
 
 pob: load_pob luacurl frontend
 	pushd PathOfBuilding; \
-	unzip 'tree*.zip'; \
+	unzip -o 'tree*.zip'; \
 	unzip runtime-win32.zip lua/xml.lua lua/base64.lua lua/sha1.lua; \
 	mv lua/*.lua .; \
 	rmdir lua; \
@@ -21,7 +21,7 @@ frontend:
 	meson -Dbuildtype=release --prefix=${DIR}/PathOfBuilding.app --bindir=Contents/MacOS build
 
 load_pob:
-	git clone --depth 1 https://github.com/Openarl/PathOfBuilding.git; \
+	git clone --depth 1 https://github.com/PathOfBuildingCommunity/PathOfBuilding.git; \
 	pushd PathOfBuilding; \
 	rm -rf .git; \
 	popd
