--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ before_deploy:
 
 deploy:
   provider: releases
-  api_key: $GITHUB_TOKEN
+  token: $GITHUB_TOKEN
   file:
     - "${TRAVIS_BUILD_DIR}/${ARCHIVE_NAME}"
   name: "PathOfBuilding"
