--- a/.travis.yml
+++ b/.travis.yml
@@ -62,6 +62,7 @@ deploy:
     - "${TRAVIS_BUILD_DIR}/${ARCHIVE_NAME}"
   name: "PathOfBuilding"
   overwrite: true
+  skip_cleanup: true
   target_commitish: $TRAVIS_COMMIT
 
 after_deploy:
