--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
       - tar -cf - -C ${TRAVIS_BUILD_DIR}/PathOfBuilding/ $(ls -A ${TRAVIS_BUILD_DIR}"/PathOfBuilding/") | xz -c > PathOfBuilding.linux.tar.xz
 
 before_deploy:
-  - export TR_TAG="nightly-$(date +'%Y/%m/%d')"
+  - export TR_TAG="weekly-$(date +'%Y%m%d%H%M')"
   - |
     if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       git config --local user.name "vodkaskywalker"
